# dualization

./: .clang-format  .gitignore  README.md  compile.sh  meson.build  test.sh  test_gen.sh
hypergraph_r/: hypergraph_random_2025_04_28_19_39_28_10.json  hypergraph_random_2025_04_28_19_39_28_11.json  hypergraph_random_2025_04_28_19_39_28_6.json  hypergraph_random_2025_04_28_19_39_28_7.json  hypergraph_random_2025_04_28_19_39_28_8.json  hypergraph_random_2025_04_28_19_39_28_9.json  hypergraph_random_2025_04_28_20_01_00_12.json  hypergraph_random_2025_04_28_20_01_00_13.json  hypergraph_random_2025_04_28_20_01_08_15.json  hypergraph_random_2025_04_28_20_01_29_16.json  hypergraph_random_2025_04_28_20_02_53_17.json  hypergraph_random_2025_04_28_23_06_21_20.json  hypergraph_random_2025_04_29_04_00_07_21.json
include/: bipartite_02.hpp  bipartite_hypergraph.hpp
saved_hypergraphs/hypergraphs_c/: hypergraph_random_combination_2025_05_18_12_26_43_10.json  hypergraph_random_combination_2025_05_18_12_26_43_11.json  hypergraph_random_combination_2025_05_18_12_26_43_12.json  hypergraph_random_combination_2025_05_18_12_26_43_6.json  hypergraph_random_combination_2025_05_18_12_26_43_7.json  hypergraph_random_combination_2025_05_18_12_26_43_8.json  hypergraph_random_combination_2025_05_18_12_26_43_9.json  hypergraph_random_combination_2025_05_18_12_26_44_13.json  hypergraph_random_combination_2025_05_18_12_26_47_14.json  hypergraph_random_combination_2025_05_18_12_27_00_15.json  hypergraph_random_combination_2025_05_18_12_27_45_16.json  hypergraph_random_combination_2025_05_18_12_30_51_17.json  hypergraph_random_combination_2025_05_19_12_12_33_18.json  hypergraph_random_combination_2025_05_19_13_00_42_19.json  hypergraph_random_combination_2025_05_19_15_55_40_20.json
src/: bipartite_02.cpp  bipartite_hypergraph.cpp  experiment.cpp  generate_hypergraph.cpp
src_cpp/: Makefile  bipartite_hypergraph.hpp  experiment_prod_ver1.5.cpp  generate_hypergraph_ver1.0.cpp
(+25 files in other folders)
